tests/fixtures/type_errors/missing_contracts.airl
;; ERROR: must have :requires
(defn bad :sig [(x : i32) -> i32] :body x)
